--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         
     <header>
-        <img class="logoAlura" src="imagens/logoAlura.png" alt="Logo da Alura">
+        <img class="logoAlura" src="https://github.com/Marco-Rozauro/Chellenge-turma-5/blob/master/imagens/logoAlura.png" alt="Logo da Alura">
     </header>
 
    <main>
